Packages version updated

--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
     <link rel="stylesheet" href="/css/tailwind.css">
 </head>
 <body>
-    <div class="flex uppercase justify-center items-center w-full h-screen text-5xl font-extrabold text-blue-600 bg-purple-200">
-        Hello Tailwind
+    <div class="flex uppercase justify-center items-center w-full h-screen text-5xl font-extrabold text-blue-900 bg-purple-400">
+        Hello Tailwind 3.2.4
     </div>
 </body>
 </html>
