custom fonts and plugins added

--- a/index.html
+++ b/index.html
@@ -8,8 +8,11 @@
     <link rel="stylesheet" href="/css/tailwind.css">
 </head>
 <body>
-    <div class="flex uppercase justify-center items-center w-full h-screen text-5xl font-extrabold text-blue-900 bg-purple-400">
-        Hello Tailwind 3.2.4
+    <div class="flex justify-center items-center w-full h-screen text-5xl font-extrabold text-blue-900 bg-purple-50">
+        <div class="space-y-3">
+            <p>Hello Tailwind 3.2.4</p>
+            <p class="font-poppins text-3xl font-semibold">Hello Poppins</p>
+        </div>
     </div>
 </body>
 </html>
